# MicroSD-Pico

./: CMakeLists.txt  FATFS_SETUP.md  README.md  README.zh.md  README_zh.md  build_pico.bat  rwsd_demo.uf2
examples/: advanced_usage.cpp  basic_usage.cpp  debug_simple.cpp  performance_test.cpp  rwsd_demo.cpp  serial_test.cpp
include/: micro_sd.hpp  pin_config.hpp  rw_sd.hpp  spi_config.hpp
src/: micro_sd.cpp  rw_sd.cpp
